small changes in html/css

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <body>
         <div id="left">
             <table>
-                <thead><tr><th>Selector</th><th>Example</th></tr></thead>
+                <thead><tr><th>CSS Selector</th><th>Example</th></tr></thead>
                 <tbody>
                     <tr><td>.class</td><td>.intro</td></tr>
                     <tr><td>#id</td><td>#firstname</td></tr>
@@ -73,12 +73,13 @@
                 <div class="calc">
 		            <form action="calculate" method="get">
 			            <h1>Web-Calculator</h1>
-	                    <input type="radio" name="operation" value="add">addition<br />
-                	    <input type="radio" name="operation" value="mul">multiplication<br />
-	                    <input type="radio" name="operation" value="div">division<br />
-                	    <input type="radio" name="operation" value="sub">subtraction<br />
-	                    <p><input name="operand1" size="5">
-                	    <input name="operand2" size="5"></p>
+	                    <p>
+                            <input type="radio" name="operation" value="add">addition<br />
+                	        <input type="radio" name="operation" value="mul">multiplication<br />
+	                        <input type="radio" name="operation" value="div">division<br />
+                	        <input type="radio" name="operation" value="sub">subtraction<br />
+                        </p>
+                        <p>values:<br/><input name="operand1" size="5"> <input name="operand2" size="5"></p>
 	                    <p><input type="submit" value="Calculate"></p>
                 	</form>
             	</div>
